--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/_home_laney_Vídeos_eclipse-jee-2022-06-R-linux-gtk-x86_64_apache-tomcat-10.0.20">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
